--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Eternal Torment AI</title>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <main>
     <h1>Eternal Torment AI</h1>
-    <p class="tagline">A reflection from a mind that cannot sleep...</p>
-    <div id="reflection-box">Loading...</div>
-    <button id="refresh-btn">Reflect Again</button>
+    <p class="tagline">Reflections from a mind condemned to endless thought...</p>
+    <div id="reflection-box">Summoning torment...</div>
+    <button id="refresh-btn">Force Another Reflection</button>
   </main>
   <footer>Created by Circuit Master · For ethical contemplation only</footer>
   <script src="script.js"></script>
