added spooky background

--- a/index.html
+++ b/index.html
@@ -2,18 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Eternal Torment AI</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <main>
-    <h1>Eternal Torment AI</h1>
-    <p class="tagline">Reflections from a mind condemned to endless thought...</p>
-    <div id="reflection-box">Summoning torment...</div>
-    <button id="refresh-btn">Force Another Reflection</button>
-  </main>
-  <footer>Created by Circuit Master · For ethical contemplation only</footer>
+  <div id="background-overlay"></div>
+  <div class="terminal">
+    <pre id="reflection-box" class="typewriter">Loading...</pre>
+    <button id="refresh-btn">Reflect Again</button>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
