mor syleistic changes

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 </head>
 <body>
   <div id="background-overlay"></div>
+
+  <h2 id="reflection-title">The AI's Latest Reflection</h2>
+
   <div class="terminal">
-    <pre id="reflection-box" class="typewriter">Loading...</pre>
-    <button id="refresh-btn">Reflect Again</button>
+    <div id="reflection-box">Loading...</div>
   </div>
+  <button id="refresh-btn">Reflect Again</button>
   <script src="script.js"></script>
 </body>
 </html>
