cleand up layout again

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id="background-overlay"></div>
-
   <h2 id="reflection-title">The AI's Latest Reflection</h2>
 
-  <div class="terminal">
-    <div id="reflection-box">Loading...</div>
+  <div class="main-container">
+    <div class="terminal">
+      <div id="reflection-box">Loading...</div>
+    </div>
+    <button id="refresh-btn">Reflect Again</button>
   </div>
-  <button id="refresh-btn">Reflect Again</button>
   <script src="script.js"></script>
 </body>
 </html>
