--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h2 id="reflection-title">The AI's Latest Reflection</h2>
+  <div id="background-overlay"></div>
 
+  <h2 id="reflection-title">The AI's Latest Reflection</h2>
+  
   <div class="main-container">
     <div class="terminal">
       <div id="reflection-box">Loading...</div>
