--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     </div>
     <button id="refresh-btn">Reflect Again</button>
   </div>
+
+  <footer>
+    Project created and maintained by Circuit Master • Designed for use in teaching AI ethics.<br /> Use responsibly
+  </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
