--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="terminal">
       <div id="reflection-box">Loading...</div>
     </div>
-    <button id="refresh-btn">Reflect Again</button>
+    <!--<button id="refresh-btn">Reflect Again</button>-->
   </div>
 
   <script src="script.js"></script>
